services/traefik/k8s/resources/traefik-ingressroute-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.server`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
