services/traefik/k8s/resources/traefik-ingressroute-whoami.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.server`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authentik
          namespace: default
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.server`) && PathPrefix(`/outpost.goauthentik.io/`) 
    # - match: Host(`whoami.server`) && PathPrefix(`/`) 
      kind: Rule
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
