services/traefik/k8s/resources/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routes
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.server`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80

    - match: Host(`jellyfin.server`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096

    - match: Host(`torrent.server`)
      kind: Rule
      services:
        - name: transmission
          port: 10109

    - match: Host(`sonarr.server`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989

    - match: Host(`radarr.server`)
      kind: Rule
      services:
        - name: radarr
          port: 7878

    - match: Host(`jackett.server`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
